fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>180 Medical</fullName>
            </value>
            <value>
                <fullName>Byram</fullName>
            </value>
            <value>
                <fullName>WMS</fullName>
            </value>
            <value>
                <fullName>Dolphin Med</fullName>
            </value>
            <value>
                <fullName>ActiveStyle</fullName>
            </value>
            <value>
                <fullName>Apple West</fullName>
            </value>
            <value>
                <fullName>CWS</fullName>
            </value>
            <value>
                <fullName>Care Medical</fullName>
            </value>
            <value>
                <fullName>Doctors Medical Rental</fullName>
            </value>
            <value>
                <fullName>Fletcher Medical</fullName>
            </value>
            <value>
                <fullName>Hope Medical</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Symbius</fullName>
            </value>
            <value>
                <fullName>Shields</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Urological</fullName>
            </value>
            <value>
                <fullName>Strive</fullName>
            </value>
            <value>
                <fullName>UroMed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>