fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Purpose_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Meeting__c</fullName>
    <label>Purpose of Meeting</label>
    <type>TextArea</type>
</CustomField>