fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>First</fullName>
                <isActive>false</isActive>
                <label>First</label>
            </value>
            <value>
                <fullName>Second</fullName>
                <isActive>false</isActive>
                <label>Second</label>
            </value>
            <value>
                <fullName>Third</fullName>
                <isActive>false</isActive>
                <label>Third</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>