fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/RegionalClinicalSalesManager__c.field-meta.xml
<CustomField>
    <fullName>RegionalClinicalSalesManager__c</fullName>
    <formula>Profile__r.Profile_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Clinical Sales Manager</label>
    <type>Text</type>
</CustomField>