fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/RegionManagement__c.field-meta.xml
<CustomField>
    <fullName>RegionManagement__c</fullName>
    <label>Region Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
            <value>
                <fullName>Exceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>