fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/RegionManagementDetails__c.field-meta.xml
<CustomField>
    <fullName>RegionManagementDetails__c</fullName>
    <label>Region Management Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RegionManagement__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not work collaboratively with Sales Rep to define clinical priorities within Region</fullName>
            </value>
            <value>
                <fullName>Does not understand regions performance and goals</fullName>
            </value>
            <value>
                <fullName>Does not communicate with Sales Team (scheduled calls, pre-call planning etc)</fullName>
            </value>
            <value>
                <fullName>Does not develop strong relationships/champions with current and new customers</fullName>
            </value>
            <value>
                <fullName>Works collaboratively with Sales Rep to define clinical priorities within Region</fullName>
            </value>
            <value>
                <fullName>Understands regions performance and goals</fullName>
            </value>
            <value>
                <fullName>Communicate well with Sales Team, rarely requires prompting and/or follow-up</fullName>
            </value>
            <value>
                <fullName>Develops strong relationships/champions with current and new customers</fullName>
            </value>
            <value>
                <fullName>Constantly works collaboratively with Sales Rep to define current and new clinical priorities within Region</fullName>
            </value>
            <value>
                <fullName>Fully understands regions performance and goals</fullName>
            </value>
            <value>
                <fullName>Proactively communicates with Sales Team</fullName>
            </value>
            <value>
                <fullName>Demonstrates deep relationships and mentors current and new customers leading to KOL’s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>