fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Rep_Competency6__c.field-meta.xml
<CustomField>
    <fullName>Rep_Competency6__c</fullName>
    <label>Rep Comments</label>
    <type>TextArea</type>
</CustomField>