fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_Summary3</relationshipName>
    <type>Lookup</type>
</CustomField>