fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/RSM_formula__c.field-meta.xml
<CustomField>
    <fullName>RSM_formula__c</fullName>
    <formula>Owner:User.Manager_Name__c</formula>
    <label>Owners RSM</label>
    <type>Text</type>
</CustomField>