fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/RSM_Post_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>RSM_Post_Visit_Notes__c</fullName>
    <label>RSM Post Visit Account Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>