fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Sales_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Sales_Proficiency__c</fullName>
    <description>Sales Proficiency (Use of SPIN Questions, listening skills, overcoming objectives, presentation skills, closing)</description>
    <inlineHelpText>Sales Proficiency (Use of SPIN Questions, listening skills, overcoming objectives, presentation skills, closing)</inlineHelpText>
    <label>Sales Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>