fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_Summary1</relationshipName>
    <type>Lookup</type>
</CustomField>