fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Sales_Stage_Progress__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage_Progress__c</fullName>
    <label>Sales Stage Progress?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>