fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Selling_Skills__c.field-meta.xml
<CustomField>
    <fullName>Selling_Skills__c</fullName>
    <description>Open text to enter the unique selling skills observed</description>
    <label>Selling Skills</label>
    <type>TextArea</type>
</CustomField>