fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/SendtoCSSforReview__c.field-meta.xml
<CustomField>
    <fullName>SendtoCSSforReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to CSS for Review</label>
    <type>Checkbox</type>
</CustomField>