fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/SFDC__c.field-meta.xml
<CustomField>
    <fullName>SFDC__c</fullName>
    <inlineHelpText>RSM: Please add your observations on the reps SFDC utilization.</inlineHelpText>
    <label>SFDC and Imperative Tracking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>