fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Successful_evaluation_criteria__c.field-meta.xml
<CustomField>
    <fullName>Successful_evaluation_criteria__c</fullName>
    <inlineHelpText>Determined Successful evaluation criteria</inlineHelpText>
    <label>Successful evaluation criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>