fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Territory_Business_Plan_Gap_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Territory_Business_Plan_Gap_Analysis__c</fullName>
    <inlineHelpText>RSM: Please add your observations on the reps Territory Business Plan / Gap Analysis.</inlineHelpText>
    <label>Territory Business Plan / Gap Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>