fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Territory_Management__c.field-meta.xml
<CustomField>
    <fullName>Territory_Management__c</fullName>
    <description>Territory Management (pipeline efficiency, knowledge of territory performance, SF.Com up to date, account relationships)</description>
    <inlineHelpText>Territory Management (pipeline efficiency, knowledge of territory performance, SF.Com up to date, account relationships)</inlineHelpText>
    <label>Territory Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>