fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/TFX_Value_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>TFX_Value_to_Customer__c</fullName>
    <inlineHelpText>Value that you/TFX is bringing to customer.  What is in it for the customer?</inlineHelpText>
    <label>TFX Value to Customer</label>
    <type>TextArea</type>
</CustomField>