fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Time_Management_CE__c.field-meta.xml
<CustomField>
    <fullName>Time_Management_CE__c</fullName>
    <description>Time Management (sets daily goals, makes best use of educational resources, is on time for appointments, books flights and appointments appropriately, schedules follow up education in a timely manner, returns calls and emails within 24 hours)</description>
    <inlineHelpText>Time Management (sets daily goals, makes best use of educational resources, is on time for appointments, books flights and appointments appropriately, schedules follow up education in a timely manner, returns calls and emails within 24 hours)</inlineHelpText>
    <label>Time Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
            <value>
                <fullName>Exceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>