fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Time_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>Time_Management_Comments__c</fullName>
    <label>Time Management Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>