fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/TimeManagementDetails__c.field-meta.xml
<CustomField>
    <fullName>TimeManagementDetails__c</fullName>
    <label>Time Management Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Time_Management_CE__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not set daily goals or use educational resources, schedule follow-up</fullName>
            </value>
            <value>
                <fullName>Frequently late to appointments/meetings and/or calls</fullName>
            </value>
            <value>
                <fullName>Books flights outside of Teleflex (TFX) guidelines</fullName>
            </value>
            <value>
                <fullName>Slow response time to emails and calls</fullName>
            </value>
            <value>
                <fullName>Sets daily goals and utilizes educational resources, schedules follow-up</fullName>
            </value>
            <value>
                <fullName>Prompt to appointments/meetings and calls</fullName>
            </value>
            <value>
                <fullName>Books flights per TFX guidelines</fullName>
            </value>
            <value>
                <fullName>Returns calls and emails within 24 hours</fullName>
            </value>
            <value>
                <fullName>Exceptionally good planning and organizational skills</fullName>
            </value>
            <value>
                <fullName>Always delivers on time</fullName>
            </value>
            <value>
                <fullName>Schedules flights per TFX guidelines</fullName>
            </value>
            <value>
                <fullName>Prompt and proactive response to emails and calls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>