fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/to_Focus_YTD_Quota__c.field-meta.xml
<CustomField>
    <fullName>to_Focus_YTD_Quota__c</fullName>
    <label>% to Focus YTD Quota</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>