fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Top_3_At_Risk_HOL_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Top_3_At_Risk_HOL_Accounts__c</fullName>
    <defaultValue>&quot;Account 1:&quot;&amp;BR()&amp;&quot;Account 2:&quot;&amp;BR()&amp;&quot;Account 3:&quot;&amp;BR()</defaultValue>
    <inlineHelpText>Please enter your Top 3 At Risk HOL accounts with Annual Trend to Maintain/Grow</inlineHelpText>
    <label>Top 3 At Risk HOL Accounts:</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>