fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Top_3_Focus_Surgeon_Targets__c.field-meta.xml
<CustomField>
    <fullName>Top_3_Focus_Surgeon_Targets__c</fullName>
    <defaultValue>&quot;Surgeon 1:&quot;&amp;BR()&amp;&quot;Surgeon 2:&quot;&amp;BR()&amp;&quot;Surgeon 3:&quot;&amp;BR()</defaultValue>
    <inlineHelpText>Please enter your Top 3 Focus Surgeon Targets along with the Product and Annual Value</inlineHelpText>
    <label>Top 3 Focus Surgeon Targets:</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>