fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Use_of_Available_Clinical_Tools__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Available_Clinical_Tools__c</fullName>
    <description>Use of Available Clinical Tools (iPad, literature, posters, white papers, references, SAM, SF.com.)</description>
    <inlineHelpText>Use of Available Clinical Tools (iPad, literature, posters, white papers, references, SAM, SF.com.)</inlineHelpText>
    <label>Use of Available Clinical Tools</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
            <value>
                <fullName>Exceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>