fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Use_of_Available_Sales_Tools__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Available_Sales_Tools__c</fullName>
    <description>Use of Available Sales Tools (i.e., iPad, literature, white papers, references, etc.)</description>
    <inlineHelpText>Use of Available Sales Tools (i.e., iPad, literature, white papers, references, etc.)</inlineHelpText>
    <label>Use of Available Sales Tools</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>