fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Use_of_Available_Sales_Tools_Comments__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Available_Sales_Tools_Comments__c</fullName>
    <label>Use of Available Sales Tools Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>