fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/UseofAvailableClinicalToolsDetails__c.field-meta.xml
<CustomField>
    <fullName>UseofAvailableClinicalToolsDetails__c</fullName>
    <label>Use of Available Clinical Tools Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Use_of_Available_Clinical_Tools__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not use clinical tools</fullName>
            </value>
            <value>
                <fullName>Frequently requires assistance and instructions on the use of clinical tools</fullName>
            </value>
            <value>
                <fullName>Effectively utilizes and understands clinical tools</fullName>
            </value>
            <value>
                <fullName>Proficient in product development and instruction utilizing the available clinical tools</fullName>
            </value>
            <value>
                <fullName>Exceptional knowledge of the available clinical tools</fullName>
            </value>
            <value>
                <fullName>Mentors others on the use of available clinical tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>