fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/VAC_Committee_Completed__c.field-meta.xml
<CustomField>
    <fullName>VAC_Committee_Completed__c</fullName>
    <description>Quantifiable impact &amp; metrics have been presented to the VAC Committee.</description>
    <inlineHelpText>Quantifiable impact &amp; metrics have been presented to the VAC Committee.</inlineHelpText>
    <label>VAC Committee Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>