fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/VAClinicalProficiencyDetails__c.field-meta.xml
<CustomField>
    <fullName>VAClinicalProficiencyDetails__c</fullName>
    <label>Clinical Proficiency Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Clinical_Proficency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lacks skills and/or knowledge to perform role appropriately</fullName>
            </value>
            <value>
                <fullName>Limited and/or knowledge of role/IFU, further training required,</fullName>
            </value>
            <value>
                <fullName>Frequently requires assistance or instruction</fullName>
            </value>
            <value>
                <fullName>Skills and/or knowledge meet understand and performs most phases of role well, occasionally requires assistance.</fullName>
            </value>
            <value>
                <fullName>Satisfactory skills and/or knowledge to perform role appropriately</fullName>
            </value>
            <value>
                <fullName>Occasionally requires assistant or instructions</fullName>
            </value>
            <value>
                <fullName>Very well informed seldom requires assistance and/or instruction</fullName>
            </value>
            <value>
                <fullName>Expert in Clinical knowledge and grasps all aspects of clinical role</fullName>
            </value>
            <value>
                <fullName>Seen as a Clinical role model/expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>