fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Validated_decision_criteria__c.field-meta.xml
<CustomField>
    <fullName>Validated_decision_criteria__c</fullName>
    <inlineHelpText>Validated decision criteria &amp; develop a strategy to address them.</inlineHelpText>
    <label>Validated decision criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>