fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/WasThisFieldRideVirtual__c.field-meta.xml
<CustomField>
    <fullName>WasThisFieldRideVirtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Training</label>
    <type>Checkbox</type>
</CustomField>