fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/X3D_Develop_Question__c.field-meta.xml
<CustomField>
    <fullName>X3D_Develop_Question__c</fullName>
    <label>3D - Develop Question</label>
    <type>TextArea</type>
</CustomField>