fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/X3D_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>X3D_Effectiveness__c</fullName>
    <label>3D Effectiveness</label>
    <type>TextArea</type>
</CustomField>