fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/YTD_Objective__c.field-meta.xml
<CustomField>
    <fullName>YTD_Objective__c</fullName>
    <label>YTD Objective</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>