fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/YTD_Objective_Totals__c.field-meta.xml
<CustomField>
    <fullName>YTD_Objective_Totals__c</fullName>
    <formula>EZIO_YTD_Objective__c +  CVC_ART_YTD_Objective__c +  PICC_VPS_YTD_Objective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Objective Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>